welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: illegal start of simple expression
      if (getDirection() == Direction.EST) [
                                           ^